less/hero.less
.hero-wrap {
	position: absolute;
	z-index: -100;
	top: 0;
	left: 0;
	width: 100%;
	min-height: calc(18em + 70vw);
	overflow: hidden;
	
	.hero-image {
		position: relative;
		width: 100%;
		height: 75vw;
		
		img {
			position: absolute;
			top: 0;
			left: 0;
			visibility: hidden;
			width: 100%;
			height: 100%;
			opacity: 0;
			filter: blur(3px);
			transform: scale3d(1.1, 1.1, 1);
			will-change: opacity, filter, transform;
			transition:
				visibility 0s linear 1.75s,
				   opacity 1.75s ease-in-out,
				    filter 1.75s ease-in-out,
				 transform 1.75s ease-in-out;
			
			&.active {
				visibility: visible;
				opacity: 1;
				filter: blur(0px);
				transform: scale3d(1, 1, 1);
				will-change: opacity, filter, transform;
				transition:
					visibility 0s linear 0s,
					   opacity 1.25s ease-in-out .15s,
					    filter 1.25s ease-in-out .15s,
					 transform 1.25s ease-in-out .15s;
			}
		}
	}
	
	.tearpaper-lower {
		position: absolute;
		z-index: 100;
		top: (300vw/720*100);
		left: 0;
		width: 100%;
		height: (480vw/720*100);
		transform: translate3d(0, 0, 0);
		
		img {
			width: 100%;
			height: 100%;
		}
	}
}

